--- a/src/log4j.properties
+++ b/src/log4j.properties
@@ -5,6 +5,6 @@ log4j.appender.ConsoleAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.ConsoleAppender.layout.ConversionPattern=%-7p %d [%t] %c [%X{userName}] [%X{accessToken}] - %m%n
 
 log4j.appender.FileAppender=org.apache.log4j.RollingFileAppender
-log4j.appender.FileAppender.File=./Downloads/log/gofindo.log
+log4j.appender.FileAppender.File=./../Downloads/log/gofindo.log
 log4j.appender.FileAppender.layout=org.apache.log4j.PatternLayout
 log4j.appender.FileAppender.layout.ConversionPattern=%-7p %d [%t] %c [%X{userName}]  - %m%n
